Fixed image display when looking into other user profiles
Before, when looking into another user's profile, display would be messed up. Specifically, the image would not fit within it's container. I fixed this issue so image now its as expected.

--- a/src/index.css
+++ b/src/index.css
@@ -124,14 +124,14 @@ input {
   padding-left: 0em;
 }
 
-.img-container {
+.img-container .post-img{
+  width: 100%;
+  height: auto;
   margin-top: auto;
   margin-bottom: auto;
   margin-left: auto;
   margin-right: auto;
   object-fit: cover;
-  width: 100%;
-  height: auto;
   max-height: 40vw;
   border: 2px solid grey;
   border-radius: 1em;
